Make sure the group labels don't wrap

--- a/games/csgo/styles.css
+++ b/games/csgo/styles.css
@@ -83,6 +83,7 @@ br {
     text-overflow: ellipsis;
     top: 2px;
     width: 50px;
+    white-space: nowrap;
 }
 
 .group-label.astralis {
